Bug #218 LOAD DATA INFILE IGNORE is well logged, but read as LOAD DATA INFILE REPLACE
Submitted: 1 Apr 2003 10:09 Modified: 9 Apr 2003 16:29
Reporter: Guilhem Bichot
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:3.23, 4.0 OS:Any (all)
Assigned to: Guilhem Bichot Target Version:

[1 Apr 2003 10:09] Guilhem Bichot
Description:
See synopsis.

How to repeat:
create table t (a int not null primary key, b int);
insert into t values(1,0);
#create a file called 'file' that contains 1\t2 (\t=TAB)
load data infile 'file' ignore into table t ;

Then do mysqlbinlog, and see REPLACE instead of IGNORE.
And the replication code has the bug too :
the slave executes REPLACE, which causes different results
than on the master.

Suggested fix:
pushing soon.
[9 Apr 2003 16:29] Guilhem Bichot
Thank you for your bug report. This issue has been fixed in the latest
development tree for that product. You can find more information about
accessing our development trees at 
    http://www.mysql.com/doc/en/Installing_source_tree.html

changeset 1.1367